# mkdocs2Notion

./: INTERNALS.md  LICENSE  README.md  agents.md  cli.py  pyproject.toml  sitecustomize.py
docs/: .mkdocs2notion_ids.json  advanced.md  basic.md  test3.md
docs2/: mkdocs.yml
docs2/docs/: .mkdocs2notion_ids.json  api.md  index.md
docs2/docs/tutorials/: advanced-topics.md  getting-started.md
docs4/: addingAFile.md  admonitions.md  code-blocks.md  images.md  index.md  lists.md  mkdocs.yml  multileveltodos.md
mkdocs2notion/: cli.py  runner.py
mkdocs2notion/loaders/: directory.py  id_map.py  mkdocs_nav.py  mkdocs_project.py
mkdocs2notion/markdown/: elements.py  parser.py
mkdocs2notion/notion/: api_adapter.py  serializer.py
mkdocs2notion/utils/: logging.py  simple_yaml.py
scripts/: connectionCheck.py  test_connection.py
tests/: conftest.py  test_api_adapter.py  test_cli.py  test_cli_progress.py  test_directory.py  test_elements.py  test_id_map.py  test_logging.py  test_mkdocs_nav.py  test_mkdocs_project.py  test_parser.py  test_runner.py  test_serializer.py
tests/fixtures/mkdocs_project/: mkdocs.yml
tests/fixtures/mkdocs_project/documentation/: index.md  reference.md
tests/fixtures/mkdocs_project/documentation/guide/: first.md  second.md
tests/fixtures/mkdocs_project_unlisted/: mkdocs.yml
tests/fixtures/mkdocs_project_unlisted/documentation/guide/: unlisted.md
tests/fixtures/sample_docs/: guide.md  index.md  mkdocs.yml
tests/fixtures/sample_docs/nested/: deep.md
