[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "mkdocs2notion"
version = "0.1.0"
description = "Publish Markdown and mkdocs.yml-based documentation into Notion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "mahbam42", email = "mahbam42@gmail.com" }
]

[tool.hatch.build.targets.wheel]
packages = ["mkdocs2notion"]

dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",          # mkdocs.yml parsing
    "markdown-it-py>=3.0",  # markdown parsing engine
    "rich>=13.0",           # nicer CLI output
]

[project.urls]
Homepage = "https://github.com/mahbam42/mkdocs2notion"
Repository = "https://github.com/mahbam42/mkdocs2notion"
Issues = "https://github.com/mahbam42/mkdocs2notion/issues"

[project.scripts]
mkdocs2notion = "mkdocs2notion.cli:main"

# Optional but recommended: type checking + lint config
[tool.ruff]
line-length = 88
extend-select = ["I"]

[tool.mypy]
python_version = "3.9"
strict = true

# Hatch tasks (for convenience)
[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
    "black",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
lint = "ruff ."
lint-fix = "ruff . --fix"
typecheck = "mypy mkdocs2notion"
check = ["lint", "typecheck", "test"]
