[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "mkdocs2notion"
version = "0.1.0"
description = "Publish Markdown and mkdocs.yml-based documentation into Notion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "mahbam42", email = "mahbam42@gmail.com" }
]

dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "rich>=13.0",
    "notion-client>=2.0.0",
    "requests>=2.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mkdocs2notion"]

[project.urls]
Homepage = "https://github.com/mahbam42/mkdocs2notion"
Repository = "https://github.com/mahbam42/mkdocs2notion"
Issues = "https://github.com/mahbam42/mkdocs2notion/issues"

[project.scripts]
mkdocs2notion = "mkdocs2notion.cli:main"

[tool.ruff]
line-length = 88
extend-select = ["I"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
    "black",
    "notion-client",
]

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "."

[tool.hatch.envs.default.scripts]
test = "pytest"
lint = "ruff check -v"
lint-fix = "ruff format"
typecheck = "mypy mkdocs2notion"
check = ["lint", "typecheck", "test"]
