[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "mkdocs2notion"
version = "0.2.1"
description = "Publish Markdown and mkdocs.yml-based documentation into Notion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "mahbam42", email = "mahbam42@gmail.com" }
]

dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "notion-client>=2.0.0",
    "requests>=2.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mkdocs2notion"]

[project.urls]
Homepage = "https://github.com/mahbam42/mkdocs2notion"
Repository = "https://github.com/mahbam42/mkdocs2notion"
Issues = "https://github.com/mahbam42/mkdocs2notion/issues"

[project.scripts]
mkdocs2notion = "mkdocs2notion.cli:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["requests"]
ignore_missing_imports = true

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
    "black",
    "notion-client",
    "mkdocs"
]

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "."

[tool.hatch.envs.default.scripts]
test = "pytest"
lint = "ruff check"
lint-fix = "ruff check --fix"
typecheck = "mypy mkdocs2notion"
checks = ["lint", "typecheck", "test"]
serve = "mkdocs serve"

[tool.hatch.publish.index]
user = "env:HATCH_INDEX_USER"
auth = "env:HATCH_INDEX_AUTH"